<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_view_default_height"
    android:layout_margin="@dimen/standard_margin"
    app:cardCornerRadius="@dimen/card_view_corners">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_snapshot_card_view_custom_layout"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/iv_snapshot_content_description"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_name_card_view_custom_layout"
            android:layout_width="@dimen/dimen_fully_stretchable"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/iv_snapshot_card_view_custom_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Name Surname" />

        <TextView
            android:id="@+id/tv_age_card_view_custom_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/tv_age_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_card_view_custom_layout"
            tools:text="Age:" />

        <TextView
            android:id="@+id/tv_weight_card_view_custom_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/tv_weight_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_age_card_view_custom_layout"
            tools:text="Weight" />

        <TextView
            android:id="@+id/tv_height_card_view_custom_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/tv_height_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_weight_card_view_custom_layout"
            app:layout_constraintStart_toEndOf="@+id/tv_weight_card_view_custom_layout"
            tools:text="Height" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
